--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 <body>
     <h1>Git & GitHub</h1>
 
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci asperiores sit magni libero quam nostrum sint
+        voluptatum impedit possimus minima. Consequatur exercitationem dolores nam asperiores libero iure, quisquam
+        impedit similique?</p>
+
     <script src="/index.js"></script>
 </body>
 
