--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
         voluptatum impedit possimus minima. Consequatur exercitationem dolores nam asperiores libero iure, quisquam
         impedit similique?</p>
 
+    <ul>
+        <li>Bolg one</li>
+        <li>Bolg Two</li>
+    </ul>
+
     <script src="/index.js"></script>
 </body>
 
