--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
         <li>Bolg Two</li>
     </ul>
 
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate commodi totam consequuntur ea delectus. Culpa
+        in similique dolorum libero accusantium omnis esse quo aliquam nisi, architecto ducimus ratione aliquid? Labore.
+    </p>
+
     <script src="/index.js"></script>
 </body>
 
